# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20210912050104_create_subscriptions_table.sql  20211008180601_create_subscription_tokens_table.sql  20211123132420_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
