[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.9"
actix-web = "4.0.0-beta.8"
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
serde-aux = "2.3.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
once_cell = "1.8.0"
tokio = { version = "1", features = ["rt", "macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5.0"
